--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/List.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/List.cshtml
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="row">
-        <div class="col-xs-6 col-md-1"></div>
-            <div class="col-xs-6 col-md-4">
+            <div class="col-xs-6 col-md-5">
                 <form class="form-inline">
                     <div class="form-group">
-                        <h4>Search</h4>
+                        <br />
+                        <label>Search</label>
                         <input type="text" class="form-control" id="myInput" onkeyup="myFunction()" placeholder="Search for title, description or content..." title="Type in a name">
                     </div>
                 </form>
@@ -19,11 +19,12 @@
             <div class="col-xs-6 col-md-4">
                 <h1>Todos</h1>
             </div>
-            <div class="col-xs-6 col-md-2">
-                <a href="/todo">Add New Todo</a>
-                <a href="/assignees">List of Assignees</a>
+            <div class="col-xs-6 col-md-3">
+                <br />
+                <a href="/todo" class="btn btn-default active" role="button">Add New Todo</a>
+                <a href="/assignees" class="btn btn-default active" role="button">List of Assignees</a>
             </div>
-    </div>
+        </div>
     <form class="form-inline" action="/delete" method="post">
         <table id="myTable" class="table table-striped">
             <tr>
@@ -39,22 +40,22 @@
                 <th>Email</th>
                 <th>Date</th>
             </tr>
-                @foreach (var item in Model.AllTodos)
-                {
-                    <tr>
-                        <td>@item.TodoId</td>
-                        <td>@item.Title</td>
-                        <td>@item.Description</td>
-                        <td>@item.Content</td>
-                        <td>@item.IsUrgent</td>
-                        <td>@item.IsDone</td>
-                        <td><a href="@item.TodoId/delete">Delete</a></td>
-                        <td><a href="@item.TodoId/edit">Edit</a></td>
-                        <td>@item.User.Name</td>
-                        <td>@item.User.Email</td>
-                        <td>@item.DateTime</td>
-                    </tr>
-                }
+            @foreach (var item in Model.AllTodos)
+            {
+            <tr>
+                <td>@item.TodoId</td>
+                <td>@item.Title</td>
+                <td>@item.Description</td>
+                <td>@item.Content</td>
+                <td>@item.IsUrgent</td>
+                <td>@item.IsDone</td>
+                <td><a href="@item.TodoId/delete">Delete</a></td>
+                <td><a href="@item.TodoId/edit">Edit</a></td>
+                <td>@item.User.Name</td>
+                <td>@item.User.Email</td>
+                <td>@item.DateTime</td>
+            </tr>
+            }
         </table>
     </form>
     <script>
@@ -96,7 +97,7 @@
             }
         }
     </script>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
