--- a/week-10/FoxManager/FoxManager/Views/Home/Home.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Home/Home.cshtml
@@ -1,15 +1,50 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Home</title>
-    <meta charset="utf-8" lang="en" />
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-</head>
-<body>
-    @{
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+﻿@model FoxManager.ViewModels.HomeViewModel
+@{
+    ViewBag.Title = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
+}
+<form action="/add/@Model.CurrentStudent.Name" method="post">
+    <div class="form-group">
+        <label>Task</label>
+        <input type="text" class="form-control" name="taskname">
+    </div>
+    <div class="form-group">
+        <label>Due date</label>
+        <input type="text" class="form-control" name="duedate">
+    </div>
+    <div class="form-group">
+        <label>Priority level</label>
+        <input type="text" class="form-control" name="prioritylevel">
+    </div>
+    <button type="submit" class="btn btn-default">Add</button>
+</form>
+<div class="row">
+    <div class="col-md-6">
+        <h3>@Model.CurrentStudent.Name's Tasks:</h3>
+        <table class="table table-condensed">
+            <tr>
+                <th>Task</th>
+                <th>Due Date</th>
+                <th>Priority Level</th>
+            </tr>
+            @foreach (var tasks in Model.CurrentStudentTasks)
+            {
+                @Html.Partial("_TaskPartialView")
+            }
+        </table>
+    </div>
+    <div class="col-md-6">
+        <h3>@Model.CurrentStudent.Team's Tasks:</h3>
+        <table class="table table-condensed">
+            <tr>
+                <th>Task</th>
+                <th>Due Date</th>
+                <th>Priority Level</th>
+            </tr>
+            @foreach (var tasks in Model.CurrentStudentTasks)
+            {
+                @Html.Partial("_TaskPartialView")
+            }
+        </table>
+    </div>
+</div>
