--- a/week-10/FoxManager/FoxManager/Views/Shared/_Layout.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,19 +7,11 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    @Html.Partial("_NavbarPartialView")
     <div>
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <ul class="nav navbar-nav">
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/teams">Teams</a></li>
-                    <li><a href="/classes">Classes</a></li>
-                </ul>
-            </div>
-        </nav>
+        @RenderBody()
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    @RenderBody()
 </body>
 </html>
