feat(FoxManager): add class veiw

--- a/week-10/FoxManager/FoxManager/Views/Team/Teams.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Team/Teams.cshtml
@@ -1,4 +1,4 @@
-﻿@model FoxManager.ViewModels.HomeViewModel
+﻿@model FoxManager.ViewModels.TeamViewModel
 @{
     ViewBag.Title = "Teams";
     Layout = "~/Views/Shared/_Layout.cshtml";
