--- a/week-10/FoxManager/FoxManager/Views/Home/Home.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Home/Home.cshtml
@@ -22,7 +22,7 @@
             <div class="col-md-1"></div>
             <div class="col-md-10">
             <h4>Add Tasks</h4>
-            <form action="/add/@Model.CurrentStudent.Name" method="post">
+            <form action="/addtask/@Model.CurrentStudent.Name" method="post">
                 <div class="form-group">
                     <label>Task</label>
                     <input type="text" class="form-control" name="taskname">
@@ -42,7 +42,7 @@
             <div class="col-md-10">
                 <br />
                 <h4>Edit Tasks</h4>
-                <form action="/update/@Model.CurrentStudent.Name" method="post">
+                <form action="/updatetask/@Model.CurrentStudent.Name" method="post">
                     <div class="form-group">
                         <select name="id" class="form-control">
                             @foreach (var task in Model.CurrentStudentsTeamsTasks)
@@ -82,7 +82,7 @@
                         <td>@tasks.DueDate</td>
                         <td>@tasks.PriorityLevel</td>
                         <td>
-                            <a class="btn btn-default" href="/delete/@Model.CurrentStudent.Name/@tasks.Id" role="button">
+                            <a class="btn btn-default" href="/deletetask/@Model.CurrentStudent.Name/@tasks.Id" role="button">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                             </a>
                         </td>
@@ -91,7 +91,7 @@
             </table>
         </div>
         <div class="col-md-5">
-            <h3>Your Team's Tasks:</h3>
+            <h3>@Model.CurrentStudent.Team.TeamName's Tasks:</h3>
             <table class="table table-condensed">
                 <tr>
                     <th>Task</th>
@@ -106,7 +106,7 @@
                         <td>@tasks.DueDate</td>
                         <td>@tasks.PriorityLevel</td>
                         <td>
-                            <a class="btn btn-default" href="/delete/@Model.CurrentStudent.Name/@tasks.Id" role="button">
+                            <a class="btn btn-default" href="/deletetask/@Model.CurrentStudent.Name/@tasks.Id" role="button">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                             </a>
                         </td>
