--- a/week-10/FoxManager/FoxManager/Views/Home/Home.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Home/Home.cshtml
@@ -1,117 +1,27 @@
-﻿@model FoxManager.ViewModels.HomeViewModel
+﻿@model FoxManager.ViewModels.BaseViewModel
 @{
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
-<div>
-    <nav class="navbar navbar-default navbar-static-top">
-        <div class="bg-warning text-white">
-            <div class="container">
-                <ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="/home/@Model.CurrentStudent.Name">Home</a></li>
-                    <li><a class="navbar-brand" href="/teams/@Model.CurrentStudent.Name">Teams</a></li>
-                    <li><a class="navbar-brand" href="/classes/@Model.CurrentStudent.Name">Classes</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</div>
+@Html.Partial("_NavbarPartialView", Model)
 <div class="row">
     <div class="col-md-2">
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-            <h4>Add Tasks</h4>
-            <form action="/addtask/@Model.CurrentStudent.Name" method="post">
-                <div class="form-group">
-                    <label>Task</label>
-                    <input type="text" class="form-control" name="taskname">
-                </div>
-                <div class="form-group">
-                    <label>Due date</label>
-                    <input type="text" class="form-control" name="duedate">
-                </div>
-                <div class="form-group">
-                    <label>Priority level</label>
-                    <input type="text" class="form-control" name="prioritylevel">
-                </div>
-                <button type="submit" class="btn btn-default">Add</button>
-            </form>
+                @Html.Partial("_AddTaskPartialView", Model)
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-10">
                 <br />
-                <h4>Edit Tasks</h4>
-                <form action="/updatetask/@Model.CurrentStudent.Name" method="post">
-                    <div class="form-group">
-                        <select name="id" class="form-control">
-                            @foreach (var task in Model.CurrentStudentsTeamsTasks)
-                            {
-                                <option>@task.Id</option>
-                            }
-                        </select>
-                        <label>Edit Task</label>
-                        <input type="text" class="form-control" name="taskname">
-                    </div>
-                    <div class="form-group">
-                        <label>Edit Due Date</label>
-                        <input type="text" class="form-control" name="duedate">
-                    </div>
-                    <div class="form-group">
-                        <label>Edit Priority Level</label>
-                        <input type="text" class="form-control" name="prioritylevel">
-                    </div>
-                    <button type="submit" class="btn btn-default">Update</button>
-                </form>
+                @Html.Partial("_UpdateTaskPartialView", Model)
             </div>
-            </div>
-        </div>
-        <div class="col-md-5">
-            <h3>@Model.CurrentStudent.Name's Tasks:</h3>
-            <table class="table table-condensed">
-                <tr>
-                    <th>Task</th>
-                    <th>Due Date</th>
-                    <th>Priority Level</th>
-                    <th></th>
-                </tr>
-                @foreach (var tasks in Model.CurrentStudentTasks)
-                {
-                    <tr>
-                        <td>@tasks.TaskName</td>
-                        <td>@tasks.DueDate</td>
-                        <td>@tasks.PriorityLevel</td>
-                        <td>
-                            <a class="btn btn-default" href="/deletetask/@Model.CurrentStudent.Name/@tasks.Id" role="button">
-                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </table>
-        </div>
-        <div class="col-md-5">
-            <h3>@Model.CurrentStudent.Team.TeamName's Tasks:</h3>
-            <table class="table table-condensed">
-                <tr>
-                    <th>Task</th>
-                    <th>Due Date</th>
-                    <th>Priority Level</th>
-                    <th></th>
-                </tr>
-                @foreach (var tasks in Model.CurrentStudentTasks)
-                {
-                    <tr>
-                        <td>@tasks.TaskName</td>
-                        <td>@tasks.DueDate</td>
-                        <td>@tasks.PriorityLevel</td>
-                        <td>
-                            <a class="btn btn-default" href="/deletetask/@Model.CurrentStudent.Name/@tasks.Id" role="button">
-                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </table>
         </div>
     </div>
+    <div class="col-md-5">
+        @Html.Partial("_CurrentStudentsTasksTablePartialView", Model)
+    </div>
+    <div class="col-md-5">
+        @Html.Partial("_CurrentStudentsTeamsTasksPartialView", Model)
+    </div>
+</div>
