--- a/week-10/FoxManager/FoxManager/Views/Shared/_NavbarPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_NavbarPartialView.cshtml
@@ -1,4 +1,5 @@
-﻿@model FoxManager.ViewModels.HomeViewModel
+﻿@model FoxManager.ViewModels.BaseViewModel
+
 <div>
     <nav class="navbar navbar-default navbar-static-top">
         <div class="bg-warning text-white">
