--- a/week-10/FoxManager/FoxManager/Views/Login/Login.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Login/Login.cshtml
@@ -1,33 +1,13 @@
 ﻿@model FoxManager.Models.Student
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Login Page</title>
-    <meta charset="utf-8" lang="en" />
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-</head>
-<body>
-    <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
+@{
+    ViewBag.Title = "Login Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
         <br />
-        <h2>Login Page</h2>
-        <br />
-        <form action="/login" method="post">
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control" name="name" placeholder="Name">
-            </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" name="password" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        </div>
-        <div class="col-md-4"></div>
+        @Html.Partial("_LoginFormPartialView", Model)
     </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+    <div class="col-md-4"></div>
+</div>
