fix(FoxManager): fix home

--- a/week-10/FoxManager/FoxManager/Views/Shared/_CurrentStudentsTeamsTasksPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_CurrentStudentsTeamsTasksPartialView.cshtml
@@ -6,14 +6,16 @@
         <th>Task</th>
         <th>Due Date</th>
         <th>Priority Level</th>
+        <th>Student</th>
         <th></th>
     </tr>
-    @foreach (var tasks in Model.HomeViewModel.CurrentStudentTasks)
+    @foreach (var tasks in Model.HomeViewModel.CurrentStudentsTeamsTasks)
     {
         <tr>
             <td>@tasks.TaskName</td>
             <td>@tasks.DueDate</td>
             <td>@tasks.PriorityLevel</td>
+            <td>@tasks.Student.Name</td>
             <td>
                 <a class="btn btn-default" href="/deletetask/@Model.HomeViewModel.CurrentStudent.Name/@tasks.Id" role="button">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
