--- a/week-10/FoxManager/FoxManager/Views/Class/Class.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Class/Class.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 @{
-    ViewBag.Title = "Home";
+    ViewBag.Title = "Classes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Html.Partial("_NavbarPartialView", Model)
@@ -9,9 +9,9 @@
     <div class="col-md-2">
         @Html.Partial("_AddClassPartialView", Model)
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-4"></div>
     <div class="col-md-2">
-
+        @Html.Partial("_UpdateClassPartialView", Model)
     </div>
 </div>
 <div class="row">
