--- a/week-10/FoxManager/FoxManager/Views/Shared/_AddClassPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_AddClassPartialView.cshtml
@@ -1,14 +1,12 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<h4>Add Class</h4>
-<form action="/addclass/@Model.CurrentStudent.Name" method="post">
+<form class="form-inline" action="/addclass/@Model.CurrentStudent.Name" method="post">
     <div class="form-group">
-        <label>Task</label>
-        <input type="text" class="form-control" name="classname">
+        <label class="sr-only">Add New Class</label>
+        <input type="text" class="form-control" placeholder="Class" name="classname">
     </div>
     <div class="form-group">
-        <label>Technology</label>
-        <input type="text" class="form-control" name="technology">
+        <input type="text" class="form-control" placeholder="Technology" name="technology">
     </div>
     <button type="submit" class="btn btn-default">Add</button>
 </form>
