--- a/week-10/FoxManager/FoxManager/Views/Shared/_ClassesAndStudentsTablePartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_ClassesAndStudentsTablePartialView.cshtml
@@ -5,14 +5,14 @@
     @foreach (var classes in Model.ClassViewModel.AllClass)
             {
         <tr>
-            <th class="info">@classes.ClassName</th>
+            <th class="info">@classes.ClassName<br /><p>@classes.Technology</p></th>
             <th class="info">
                 <a class="btn btn-default" href="/classinfo/@Model.ClassViewModel.CurrentStudent.Name/@classes.Id" role="button">
                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                 </a>
             </th>
             <th class="info">
-                <a class="btn btn-default" href="/deleteteam/@Model.ClassViewModel.CurrentStudent.Name/@*@team.Id*@" role="button">
+                <a class="btn btn-default" href="/deleteclass/@Model.ClassViewModel.CurrentStudent.Name/@classes.Id" role="button">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </a>
             </th>
