--- a/week-10/FoxManager/FoxManager/Views/Shared/_UpdateClassPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_UpdateClassPartialView.cshtml
@@ -1,4 +1,19 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model FoxManager.ViewModels.BaseViewModel
+
+<form class="form-inline" action="/updateclass/@Model.CurrentStudent.Name" method="post">
+    <div class="form-group">
+        <select name="id" class="form-control">
+            @foreach (var classes in Model.ClassViewModel.AllClass)
+            {
+                <option value="@classes.Id">@classes.ClassName</option>
+            }
+        </select>
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Name" name="classname">
+    </div>
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Technology" name="technology">
+    </div>
+    <button type="submit" class="btn btn-default">Update</button>
+</form>
