--- a/week-10/FoxManager/FoxManager/Views/Shared/_UpdateTaskPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_UpdateTaskPartialView.cshtml
@@ -6,10 +6,10 @@
         <select name="id" class="form-control">
             @foreach (var task in Model.HomeViewModel.CurrentStudentsTeamsTasks)
             {
-                <option>@task.Id</option>
+                <option value="@task.Id">@task.TaskName</option>
             }
         </select>
-        <label>Edit Task</label>
+        <label>Task Name</label>
         <input type="text" class="form-control" name="taskname">
     </div>
     <div class="form-group">
