--- a/week-10/FoxManager/FoxManager/Views/Shared/_AddClassPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_AddClassPartialView.cshtml
@@ -1,12 +1,28 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<form class="form-inline" action="/addclass/@Model.CurrentStudent.Name" method="post">
-    <div class="form-group">
-        <label class="sr-only">Add New Class</label>
-        <input type="text" class="form-control" placeholder="Class" name="classname">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addClassModal">Add New Class </button>
+<div class="modal fade" id="addClassModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">New Task</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/addclass/@Model.CurrentStudent.Name" method="post">
+                    <div class="form-group">
+                        <label for="recipient-name" class="control-label">Add new class:</label>
+                        <input type="text" class="form-control" name="classname">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-text" class="control-label">Technology:</label>
+                        <input class="form-control" name="technology">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" value="submit" class="btn btn-success">Add</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Technology" name="technology">
-    </div>
-    <button type="submit" class="btn btn-default">Add</button>
-</form>
+</div>
