--- a/week-10/FoxManager/FoxManager/Views/Shared/_AddTeamPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_AddTeamPartialView.cshtml
@@ -1,9 +1,24 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<form class="form-inline" action="/addteam/@Model.TeamViewModel.CurrentStudent.Name" method="post">
-    <div class="form-group">
-        <label class="sr-only">Add New Team</label>
-        <input type="text" class="form-control" placeholder="Team" name="teamname">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Add New Team </button>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">New Task</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/addteam/@Model.TeamViewModel.CurrentStudent.Name" method="post">
+                    <div class="form-group">
+                        <label for="recipient-name" class="control-label">Add new team:</label>
+                        <input type="text" class="form-control" name="teamname">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" value="submit" class="btn btn-success">Add</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <button type="submit" class="btn btn-default">Add</button>
-</form>
+</div>
