--- a/week-10/FoxManager/FoxManager/Views/Shared/_NavbarPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_NavbarPartialView.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <nav class="navbar navbar-default navbar-static-top">
-        <div class="bg-warning text-white">
+        <div>
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="/home/@Model.CurrentStudent.Name">Home</a></li>
