--- a/week-10/FoxManager/FoxManager/Views/Shared/_UpdateClassPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_UpdateClassPartialView.cshtml
@@ -1,19 +1,37 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<form class="form-inline" action="/updateclass/@Model.CurrentStudent.Name" method="post">
-    <div class="form-group">
-        <select name="id" class="form-control">
-            @foreach (var classes in Model.ClassViewModel.AllClass)
-            {
-                <option value="@classes.Id">@classes.ClassName</option>
-            }
-        </select>
+<button type="button" class="btn btn-default" data-toggle="modal" data-target="#updateModal">Update Class</button>
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">Update Task</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/updateclass/@Model.CurrentStudent.Name" method="post">
+                    <div class="form-group">
+                        <select name="id" class="form-control">
+                            @foreach (var classes in Model.ClassViewModel.AllClass)
+                            {
+                                <option value="@classes.Id">@classes.ClassName</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="recipient-name" class="control-label">Name:</label>
+                        <input type="text" class="form-control" name="classname">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-text" class="control-label">Technology:</label>
+                        <input class="form-control" name="technology">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" value="submit" class="btn btn-success">Update</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Name" name="classname">
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Technology" name="technology">
-    </div>
-    <button type="submit" class="btn btn-default">Update</button>
-</form>
+</div>
+
