--- a/week-10/FoxManager/FoxManager/Views/Shared/_UpdateTaskPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_UpdateTaskPartialView.cshtml
@@ -1,25 +1,40 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<h4>Edit Tasks</h4>
-<form action="/updatetask/@Model.HomeViewModel.CurrentStudent.Name" method="post">
-    <div class="form-group">
-        <select name="id" class="form-control">
-            @foreach (var task in Model.HomeViewModel.CurrentStudentsTeamsTasks)
-            {
-                <option value="@task.Id">@task.TaskName</option>
-            }
-        </select>
-        <label>Task Name</label>
-        <input type="text" class="form-control" name="taskname">
+<button type="button" class="btn btn-default" data-toggle="modal" data-target="#updateModal">Edit Task</button>
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">Update Task</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/updatetask/@Model.HomeViewModel.CurrentStudent.Name" method="post">
+                    <div class="form-group">
+                        <select name="id" class="form-control">
+                            @foreach (var task in Model.HomeViewModel.CurrentStudentsTeamsTasks)
+                            {
+                                <option value="@task.Id">@task.TaskName</option>
+                            }
+                        </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">Task:</label>
+                            <input type="text" class="form-control" name="taskname">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">Due date:</label>
+                            <input class="form-control" name="duedate">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">Priority level:</label>
+                            <input class="form-control" name="prioritylevel">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" value="submit" class="btn btn-success">Update</button>
+                        </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Edit Due Date</label>
-        <input type="text" class="form-control" name="duedate">
-    </div>
-    <div class="form-group">
-        <label>Edit Priority Level</label>
-        <input type="text" class="form-control" name="prioritylevel">
-    </div>
-    <button type="submit" class="btn btn-default">Update</button>
-</form>
-
+</div>
