--- a/week-10/FoxManager/FoxManager/Views/Shared/_UpdateTeamPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_UpdateTeamPartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<form class="form-inline" action="/updateteam/@Model.TeamViewModel.CurrentStudent.Name" method="post">
+@*<form class="form-inline" action="/updateteam/@Model.TeamViewModel.CurrentStudent.Name" method="post">
     <div class="form-group">
         <select name="id" class="form-control">
             @foreach (var team in Model.TeamViewModel.AllTeams)
@@ -13,4 +13,35 @@
         <input type="text" class="form-control" placeholder="Update team" name="teamname">
     </div>
     <button type="submit" class="btn btn-default">Update</button>
-</form>
+</form>*@
+
+<button type="button" class="btn btn-default" data-toggle="modal" data-target="#updateModal">Edit Team</button>
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">Update Task</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/updateteam/@Model.TeamViewModel.CurrentStudent.Name" method="post">
+                    <div class="form-group">
+                        <select name="id" class="form-control">
+                            @foreach (var team in Model.TeamViewModel.AllTeams)
+                            {
+                                <option value="@team.Id">@team.TeamName</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="recipient-name" class="control-label">Team:</label>
+                        <input type="text" class="form-control" name="teamname">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" value="submit" class="btn btn-success">Update</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
