--- a/week-10/FoxManager/FoxManager/Views/Shared/_LoginFormPartialView.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Shared/_LoginFormPartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FoxManager.ViewModels.BaseViewModel
 
-<h2>Login Page</h2>
+<h2>Fox Manager</h2>
 <br />
 <form action="/login" method="post">
     <div class="form-group">
