--- a/week-10/FoxManager/FoxManager/Views/Class/Class.cshtml
+++ b/week-10/FoxManager/FoxManager/Views/Class/Class.cshtml
@@ -3,21 +3,11 @@
     ViewBag.Title = "Classes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@Html.Partial("_NavbarPartialView", Model)
-<div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-2">
-        @Html.Partial("_AddClassPartialView", Model)
-    </div>
-    <div class="col-md-4"></div>
-    <div class="col-md-2">
-        @Html.Partial("_UpdateClassPartialView", Model)
-    </div>
-</div>
+@Html.Partial("_NavbarClassPartialView", Model)
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
         @Html.Partial("_ClassesAndStudentsTablePartialView", Model)
     </div>
 </div>
-<div class="col-md-2"></div>
+<div class="col-md-4"></div>
